[tool.poetry]
name = "wcis-shim"
version = "0.1.0"
description = ""
authors = ["Pinncol"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.4"
djangorestframework = "^3.13.1"
gunicorn = "^20.1.0"
uvicorn = "^0.17.6"
whitenoise = "^6.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
flake8 = "^4.0.1"
black = "^22.3.0"
isort = "^5.10.1"
pre-commit = "^2.18.1"
flake8-bandit = "^3.0.0"
flake8-bugbear = "^22.4.25"
commitizen = "^2.24.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"